--- a/client/pizzacity/src/index.css
+++ b/client/pizzacity/src/index.css
@@ -15,13 +15,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
-body {
-  background-color: #000 !important;
-  color: #fff;
-  text-align: center;
-}
-
 .container {
   max-width: 1260px;
   margin: auto;
+}
+.selector-for-some-widget {
+  box-sizing: content-box;
 }
