--- a/client/pizzacity/src/index.css
+++ b/client/pizzacity/src/index.css
@@ -34,3 +34,19 @@ body::before {
   align-items: center;
   gap: 20px;
 }
+@media only screen and (max-width: 1000px) {
+  .card-grid {
+    grid-template-columns: repeat(3, auto);
+  }
+}
+@media only screen and (max-width: 820px) {
+  .card-grid {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media only screen and (max-width: 535px) {
+  .card-grid {
+    grid-template-columns: repeat(1, auto);
+  }
+}
