--- a/client/pizzacity/src/index.css
+++ b/client/pizzacity/src/index.css
@@ -62,6 +62,30 @@ body {
   transform: scale(1.04);
 }
 
+/*Gotoup button anmaion*/
+.tilledAnimation {
+  animation-name: move-up-down;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes move-up-down {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/*shrinkAnimation*/
+.shrinkAnimation:hover {
+  transform: scale(0.9);
+}
+
 @media only screen and (max-width: 1000px) {
   .card-grid {
     grid-template-columns: repeat(3, auto);
